--- a/templates/signup.html
+++ b/templates/signup.html
@@ -7,14 +7,14 @@ SignUp Target computer
 {% endblock %}
 {% block content %}
 <div class="formcontainer">
-    <form action="" method="post">
+    <form action="/signup" method="post">
         <h1>SignUp</h1>
-        {{form.name.label}}<br>
-        {{form.name(class="input")}}<br>
+        <!-- {{form.name.label}}<br>
+        {{form.name(class="input")}}<br> -->
         {{form.phone.label}}<br>
         {{form.phone(class="input")}}<br>
-        {{form.email.label}}<br>
-        {{form.email(class="input")}}<br>
+        <!-- {{form.email.label}}<br>
+        {{form.email(class="input")}}<br> -->
         {{form.submit(class="formbtn")}}
     </form>
 </div>
